fix: Some code check errors/warns are fixed.