@@ -217,7 +217,7 @@ public class TestRunServiceTest {
         List<TestRun> result = testRunService.findTestRunsWithFillStatusByRequestId(any());
 
         List<TestRun> testRunsWithEmptyStatus =
-                result.stream().filter(testRun -> testRun.getTestingStatus() == null).collect(Collectors.toList());
+                result.stream().filter(testRun -> testRun.getTestingStatus() == null).toList();
 
         int countOfTestRunWithoutStatus = 0;
         Assertions.assertEquals(countOfTestRunWithoutStatus, testRunsWithEmptyStatus.size());
@@ -328,9 +328,9 @@ public class TestRunServiceTest {
 
         Assertions.assertEquals(1, simpleTestRunResponse.getBrowserInfos().size(),
                 "SimpleTestRunResponse must contain one browser name and link");
-        Assertions.assertEquals(tr.getBrowserNames().get(0),
-                simpleTestRunResponse.getBrowserInfos().get(0).getBrowserName());
-        Assertions.assertEquals(expectedLink, simpleTestRunResponse.getBrowserInfos().get(0).getBrowserUrl());
+        Assertions.assertEquals(tr.getBrowserNames().getFirst(),
+                simpleTestRunResponse.getBrowserInfos().getFirst().getBrowserName());
+        Assertions.assertEquals(expectedLink, simpleTestRunResponse.getBrowserInfos().getFirst().getBrowserUrl());
     }
 
     @Test
@@ -347,9 +347,9 @@ public class TestRunServiceTest {
 
         Assertions.assertEquals(1, simpleTestRunResponse.getBrowserInfos().size(),
                 "SimpleTestRunResponse must contain one browser name");
-        Assertions.assertEquals(tr.getBrowserNames().get(0),
-                simpleTestRunResponse.getBrowserInfos().get(0).getBrowserName());
-        assertNull(simpleTestRunResponse.getBrowserInfos().get(0).getBrowserUrl(), "Browser URL must be null");
+        Assertions.assertEquals(tr.getBrowserNames().getFirst(),
+                simpleTestRunResponse.getBrowserInfos().getFirst().getBrowserName());
+        assertNull(simpleTestRunResponse.getBrowserInfos().getFirst().getBrowserUrl(), "Browser URL must be null");
     }
 
     @Test
@@ -369,9 +369,9 @@ public class TestRunServiceTest {
 
         Assertions.assertEquals(1, simpleTestRunResponse.getBrowserInfos().size(),
                 "SimpleTestRunResponse must contain one browser name and link");
-        Assertions.assertEquals(tr.getBrowserNames().get(0),
-                simpleTestRunResponse.getBrowserInfos().get(0).getBrowserName());
-        String actualBrowserUrl = simpleTestRunResponse.getBrowserInfos().get(0).getBrowserUrl();
+        Assertions.assertEquals(tr.getBrowserNames().getFirst(),
+                simpleTestRunResponse.getBrowserInfos().getFirst().getBrowserName());
+        String actualBrowserUrl = simpleTestRunResponse.getBrowserInfos().getFirst().getBrowserUrl();
         Assertions.assertNotNull(Long.valueOf(actualBrowserUrl.substring(actualBrowserUrl.indexOf("&to=") + 4)),
                 "No exception should be thrown when searching and parsing the 'to' value in the URL");
     }
@@ -389,9 +389,9 @@ public class TestRunServiceTest {
         List<EnrichedTestRun> result =
                 testRunService.getEnrichedTestRunsByExecutionRequestId(simpleTestRun.getExecutionRequestId());
         Assertions.assertEquals(1, result.size());
-        Assertions.assertEquals(2, result.get(0).getLabels().size());
-        Assertions.assertEquals("label1", result.get(0).getLabels().get(0).getName());
-        Assertions.assertEquals("label2", result.get(0).getLabels().get(1).getName());
+        Assertions.assertEquals(2, result.getFirst().getLabels().size());
+        Assertions.assertEquals("label1", result.getFirst().getLabels().get(0).getName());
+        Assertions.assertEquals("label2", result.getFirst().getLabels().get(1).getName());
     }
 
     @Test
@@ -428,7 +428,7 @@ public class TestRunServiceTest {
         List<EnrichedTestRun> result =
                 testRunService.getEnrichedTestRunsByExecutionRequestId(simpleTestRun.getExecutionRequestId());
 
-        Assertions.assertEquals(0, result.get(0).getLabels().size());
+        Assertions.assertEquals(0, result.getFirst().getLabels().size());
     }
 
     @Test
@@ -615,7 +615,7 @@ public class TestRunServiceTest {
                 StreamUtils.extractIds(resultTestRuns, TestRunStatusUpdateResponse::getId).toArray(),
                 StreamUtils.extractIds(testRuns).toArray());
 
-        final TestRunStatusUpdateResponse resultTestRun1 = resultTestRuns.get(0);
+        final TestRunStatusUpdateResponse resultTestRun1 = resultTestRuns.getFirst();
         Assertions.assertNotNull(resultTestRun1);
         Assertions.assertEquals(testRun1Id, resultTestRun1.getId());
 
@@ -941,9 +941,9 @@ public class TestRunServiceTest {
         assertTrue(filter.getLabelIds().contains(label1.getUuid()));
         assertTrue(filter.getLabelIds().contains(label2.getUuid()));
         Assertions.assertEquals(Integer.valueOf(1), actualResponse.getTotalNumberOfEntities());
-        Assertions.assertEquals(2, actualResponse.getTestRuns().get(0).getLabels().size());
-        assertTrue(actualResponse.getTestRuns().get(0).getLabels().stream().anyMatch(label -> label.equals(label1)));
-        assertTrue(actualResponse.getTestRuns().get(0).getLabels().stream().anyMatch(label -> label.equals(label2)));
+        Assertions.assertEquals(2, actualResponse.getTestRuns().getFirst().getLabels().size());
+        assertTrue(actualResponse.getTestRuns().getFirst().getLabels().stream().anyMatch(label -> label.equals(label1)));
+        assertTrue(actualResponse.getTestRuns().getFirst().getLabels().stream().anyMatch(label -> label.equals(label2)));
     }
 
     @Test
