@@ -105,7 +105,7 @@ public class TopIssuesWidgetModelBuilderTest {
         IssueResponse issueResponse = new IssueResponse();
         issueResponse.setUuid(UUID.randomUUID());
         issueResponse.setMessage("Error Message " + index);
-        issueResponse.setTestRuns(new ArrayList<IssueTestRunResponse>(){{
+        issueResponse.setTestRuns(new ArrayList<>() {{
             IssueTestRunResponse issueTestRunResponse = new IssueTestRunResponse();
             issueTestRunResponse.setUuid(UUID.randomUUID());
             issueTestRunResponse.setName("Test Run #" + index);
@@ -128,7 +128,7 @@ public class TopIssuesWidgetModelBuilderTest {
         reportParams.setExecutionRequestUuid(UUID.randomUUID());
         reportParams.setRecipients("example@example.com");
         reportParams.setSubject("[E2E017] Top Issues widget");
-        reportParams.setDescriptions(new HashMap<String, String>(){{
+        reportParams.setDescriptions(new HashMap<>() {{
             put(WidgetType.TOP_ISSUES.toString(), "Test description for top issues");
         }});
 
@@ -142,10 +142,10 @@ public class TopIssuesWidgetModelBuilderTest {
         Assertions.assertNotNull(model);
         List<IssueResponseAdapter> topIssues = (List<IssueResponseAdapter>) model.get("topIssues");
         Assertions.assertNotNull(topIssues);
-        Assertions.assertEquals("FailPatternName", topIssues.get(0).getFailPattern());
-        Assertions.assertEquals("Error Message 0", topIssues.get(0).getErrorMessage());
-        Assertions.assertEquals("Big Error", topIssues.get(0).getFailReason());
-        Assertions.assertEquals("PRJ-98765", topIssues.get(0).getTickets().get(0).getName());
+        Assertions.assertEquals("FailPatternName", topIssues.getFirst().getFailPattern());
+        Assertions.assertEquals("Error Message 0", topIssues.getFirst().getErrorMessage());
+        Assertions.assertEquals("Big Error", topIssues.getFirst().getFailReason());
+        Assertions.assertEquals("PRJ-98765", topIssues.getFirst().getTickets().getFirst().getName());
     }
 
     @Test
@@ -167,10 +167,10 @@ public class TopIssuesWidgetModelBuilderTest {
         Assertions.assertNotNull(model);
         List<IssueResponseAdapter> topIssues = (List<IssueResponseAdapter>) model.get("topIssues");
         Assertions.assertNotNull(topIssues);
-        Assertions.assertEquals("", topIssues.get(0).getFailPattern());
-        Assertions.assertEquals("Error Message 0", topIssues.get(0).getErrorMessage());
-        Assertions.assertEquals("Big Error", topIssues.get(0).getFailReason());
-        Assertions.assertEquals("PRJ-98765", topIssues.get(0).getTickets().get(0).getName());
+        Assertions.assertEquals("", topIssues.getFirst().getFailPattern());
+        Assertions.assertEquals("Error Message 0", topIssues.getFirst().getErrorMessage());
+        Assertions.assertEquals("Big Error", topIssues.getFirst().getFailReason());
+        Assertions.assertEquals("PRJ-98765", topIssues.getFirst().getTickets().getFirst().getName());
     }
 
     private IssueResponsesModel createIssuesWithNullFailPattern() {
@@ -192,10 +192,10 @@ public class TopIssuesWidgetModelBuilderTest {
         Assertions.assertNotNull(model);
         List<IssueResponseAdapter> topIssues = (List<IssueResponseAdapter>) model.get("topIssues");
         Assertions.assertNotNull(topIssues);
-        Assertions.assertEquals("FailPatternName", topIssues.get(0).getFailPattern());
-        Assertions.assertEquals("Error Message 0", topIssues.get(0).getErrorMessage());
-        Assertions.assertEquals("", topIssues.get(0).getFailReason());
-        Assertions.assertEquals("PRJ-98765", topIssues.get(0).getTickets().get(0).getName());
+        Assertions.assertEquals("FailPatternName", topIssues.getFirst().getFailPattern());
+        Assertions.assertEquals("Error Message 0", topIssues.getFirst().getErrorMessage());
+        Assertions.assertEquals("", topIssues.getFirst().getFailReason());
+        Assertions.assertEquals("PRJ-98765", topIssues.getFirst().getTickets().getFirst().getName());
     }
 
     private IssueResponsesModel createIssuesWithNullFailReason() {
